--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "solid-js": "^1.6.0"
   },
   "devDependencies": {
+    "@types/lodash.get": "^4.4.7",
     "concurrently": "^7.6.0",
     "esbuild": "^0.17.4",
     "esbuild-plugin-solid": "^0.5.0",
@@ -73,5 +74,8 @@
   "keywords": [
     "solid"
   ],
-  "packageManager": "pnpm@7.22.0"
+  "packageManager": "pnpm@7.22.0",
+  "dependencies": {
+    "lodash.get": "^4.4.2"
+  }
 }
