--- a/package.json
+++ b/package.json
@@ -58,25 +58,25 @@
   },
   "devDependencies": {
     "@types/lodash.get": "^4.4.7",
+    "@types/lodash.set": "^4.3.7",
+    "clsx": "^1.2.1",
     "concurrently": "^8.0.1",
-    "esbuild": "^0.17.15",
     "esbuild-plugin-solid": "^0.5.0",
+    "esbuild": "^0.17.15",
     "jsdom": "^21.1.1",
+    "lodash.get": "^4.4.2",
+    "lodash.set": "^4.3.2",
     "prettier": "2.8.7",
     "solid-js": "^1.7.3",
-    "tsup": "^6.7.0",
     "tsup-preset-solid": "^0.1.8",
+    "tsup": "^6.7.0",
     "typescript": "^5.0.4",
-    "vite": "^4.2.1",
     "vite-plugin-solid": "^2.7.0",
+    "vite": "^4.2.1",
     "vitest": "^0.30.0"
   },
   "keywords": [
     "solid"
   ],
-  "packageManager": "pnpm@7.22.0",
-  "dependencies": {
-    "clsx": "^1.2.1",
-    "lodash.get": "^4.4.2"
-  }
+  "packageManager": "pnpm@7.22.0"
 }
